add entries add images

--- a/PBEAM.html
+++ b/PBEAM.html
@@ -34,13 +34,9 @@
 
 <h2>Example</h2>
 <p class="cn">
-PBEAM,1,1,5.065E+10,1.4125E+9,1.4125E+8,0.0,2.1192E+8,1.0952E-6
-</p>
-<p class="cn">
-,,,,,,,,
-</p>
-<p class="cn">
-,1.0,1.0
+PBEAM,1,1,5.065E+10,1.4125E+9,1.4125E+8,0.0,2.1192E+8,1.0952E-6<br>
+,,,,,,,,<br>
+,1.0,1.0<br>
 </p>
 
 <h2>Fields</h2>
