--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>CBEAM</title>
+  <title>Home</title>
   <link rel="stylesheet" type="text/css" href="mystyle.css">
   <script type="text/javascript" src="headerCSI.js"></script>
 </head>
