--- a/BLIQ.html
+++ b/BLIQ.html
@@ -38,15 +38,15 @@ BLIQ,1,101,4001,4002,3002,3001
   </tr>
   <tr>
     <td>EID</td>
-    <td>Element identification number. (0 < Integer < 100,000,000)</td>
+    <td>Element identification number. (0 &lt; Integer &lt; 100,000,000)</td>
   </tr>
   <tr>
     <td>PID</td>
-    <td>Property identification number of a PSHELL entry. (Integer > 0; Default = EID)</td>
+    <td>Property identification number of a PSHELL entry. (Integer &gt; 0; Default = EID)</td>
   </tr>
   <tr>
     <td>Gi</td>
-    <td>Grid point identification numbers of connection points. (Integers > 0, all unique.)</td>
+    <td>Grid point identification numbers of connection points. (Integers &gt; 0, all unique.)</td>
   </tr>
 </table>
 
@@ -56,6 +56,7 @@ BLIQ,1,101,4001,4002,3002,3001
 <li> 
 G1-G4 must be in located in a plane parallel to the basic coordinate system x-y plane.  
 </li>
+</ol>
 
 </div>
 
