--- a/CELAS2.html
+++ b/CELAS2.html
@@ -39,7 +39,7 @@ CELAS2,299,515000.0,201,5,202,5,0
   </tr>
   <tr>
     <td>EID</td>
-    <td>Unique element identification number. (0 < Integer < 100,000,000)</td>
+    <td>Unique element identification number. (0 &lt; Integer &lt; 100,000,000)</td>
   </tr>
   <tr>
     <td>K</td>
@@ -47,7 +47,7 @@ CELAS2,299,515000.0,201,5,202,5,0
   </tr>
   <tr>
     <td>G1, G2</td>
-    <td>Geometric grid point or scalar identification number. (Integer > 0)</td>
+    <td>Geometric grid point or scalar identification number. (Integer &gt; 0)</td>
   </tr>
   <tr>
     <td>C1, C2</td>
