--- a/CMASS1.html
+++ b/CMASS1.html
@@ -38,15 +38,15 @@ CMASS1,4154,110,2052,1
   </tr>
   <tr>
     <td>EID</td>
-    <td>Unique element identification number. (0 < Integer < 100,000,000)</td>
+    <td>Unique element identification number. (0 &lt; Integer &lt; 100,000,000)</td>
   </tr>
   <tr>
     <td>PID</td>
-    <td>Property identification number of a PMASS entry. (Integer > 0)</td>
+    <td>Property identification number of a PMASS entry. (Integer &gt; 0)</td>
   </tr>
   <tr>
     <td>G1</td>
-    <td>Geometric grid or scalar point identification number. (Integer > 0)</td>
+    <td>Geometric grid or scalar point identification number. (Integer &gt; 0)</td>
   </tr>
   <tr>
     <td>C1</td>
