--- a/CROD.html
+++ b/CROD.html
@@ -38,15 +38,15 @@ CROD,7,701,5,4
   </tr>
   <tr>
     <td>EID</td>
-    <td>Element identification number. (1 < Integer < 100,000,000)</td>
+    <td>Element identification number. (1 &lt; Integer &lt; 100,000,000)</td>
   </tr>
   <tr>
     <td>PID</td>
-    <td>Property identification number of a PROD entry. (Integer > 0)</td>
+    <td>Property identification number of a PROD entry. (Integer &gt; 0)</td>
   </tr>
   <tr>
     <td>G1, G2</td>
-    <td>Grid point identification numbers of connection points. (Integer > 0; G1 &ne; G2 )</td>
+    <td>Grid point identification numbers of connection points. (Integer &gt; 0; G1 &ne; G2 )</td>
   </tr>
 </table>
 
