--- a/CBEAM.html
+++ b/CBEAM.html
@@ -21,7 +21,7 @@
     <th>1</th><th>2</th><th>3</th><th>4</th><th>5</th><th>6</th><th>7</th><th>8</th><th>9</th>
   </tr>
   <tr>
-    <td>CBEAM</td><td>EID</td><td>PID</td><td>GA</td><td>GB</td><td>X1</td><td>X2</td><td>X3</td><td><ghost>OFFT/BIT</ghost></td>
+    <td>CBEAM</td><td>EID</td><td>PID</td><td>GA</td><td>GB</td><td>X1</td><td>X2</td><td>X3</td><td class="ghost">OFFT/BIT</td>
   </tr>
 </table>
 
@@ -38,22 +38,22 @@ CBEAM,9,101,2004,2005,1.0,0.0,0.0
   </tr>
   <tr>
     <td>EID</td>
-    <td>Unique element identification number. (0 < Integer < 100,000,000)</td>
+    <td>Unique element identification number. (0 &lt; Integer &lt; 100,000,000)</td>
   </tr>
   <tr>
     <td>PID</td>
-    <td>Property identification number of PBEAM or PBEAML entry. (Integer > 0)</td>
+    <td>Property identification number of PBEAM or PBEAML entry. (Integer &gt; 0)</td>
   </tr>
   <tr>
     <td>GA, GB</td>
-    <td>Grid point identification numbers of connection points. (Integer > 0)</td>
+    <td>Grid point identification numbers of connection points. (Integer &gt; 0)</td>
   </tr>
   <tr>
     <td>X1, X2, X3</td>
     <td>Components of orientation vector in the basic coordinate system. (Real)</td>
   </tr>
   <tr>
-    <td><ghost>OFFT/BIT</ghost></td>
+    <td class="ghost">OFFT/BIT</td>
     <td>Not used</td>
   </tr>
 </table>
