--- a/CONM2.html
+++ b/CONM2.html
@@ -42,11 +42,11 @@ CONM2,3000,1001,,10.060968
   </tr>
   <tr>
     <td>EID</td>
-    <td>Element identification number. (0 < Integer < 100,000,000)</td>
+    <td>Element identification number. (0 &lt; Integer &lt; 100,000,000)</td>
   </tr>
   <tr>
     <td>G</td>
-    <td>Grid point identification number. (Integer > 0)</td>
+    <td>Grid point identification number. (Integer &gt; 0)</td>
   </tr>
   <tr>
     <td><ghost>CID</ghost></td>
@@ -72,7 +72,7 @@ CONM2,3000,1001,,10.060968
 <li> 
 The continuation is optional.
 </li>
-
+</ol>
 </div>
 
 <script type="text/javascript" src="footerCSI.js"></script>
