correct html formatting

--- a/FORCE.html
+++ b/FORCE.html
@@ -21,7 +21,7 @@
     <th>1</th><th>2</th><th>3</th><th>4</th><th>5</th><th>6</th><th>7</th><th>8</th><th>9</th>
   </tr>
   <tr>
-    <td>FORCE</td><td>SID</td><td>G</td><td><ghost>CID</ghost></td><td>F</td><td>N1</td><td>N2</td><td>N3</td><td></td>
+    <td>FORCE</td><td>SID</td><td>G</td><td class = "ghost">CID</td><td>F</td><td>N1</td><td>N2</td><td>N3</td><td></td>
   </tr>
 </table>
 
@@ -38,14 +38,14 @@ FORCE,88,3,,1.0,0.002274,-0.015465,-0.129763
   </tr>
   <tr>
     <td>SID</td>
-    <td>Load set identification number. (Integer > 0)</td>
+    <td>Load set identification number. (Integer &gt; 0)</td>
   </tr>
   <tr>
     <td>G</td>
-    <td>Grid point identification number. (Integer > 0)</td>
+    <td>Grid point identification number. (Integer &gt; 0)</td>
   </tr>
   <tr>
-    <td><ghost>CID</ghost></td>
+    <td class = "ghost">CID</td>
     <td>Not used.</td>
   </tr>
   <tr>
