--- a/GRAV.html
+++ b/GRAV.html
@@ -21,7 +21,7 @@
     <th>1</th><th>2</th><th>3</th><th>4</th><th>5</th><th>6</th><th>7</th><th>8</th><th>9</th>
   </tr>
   <tr>
-    <td>GRAV</td><td>SID</td><td><ghost>CID</ghost></td><td>A</td><td>N1</td><td>N2</td><td>N3</td><td><ghost>MB</ghost></td><td></td>
+    <td>GRAV</td><td>SID</td><td class = "ghost">CID</td><td>A</td><td>N1</td><td>N2</td><td>N3</td><td class = "ghost">MB</td><td></td>
   </tr>
 </table>
 
@@ -38,10 +38,10 @@ GRAV,9,0,29420.4,0.138814,0.0,-0.990318
   </tr>
   <tr>
     <td>SID</td>
-    <td>Load set identification number. (Integer > 0)</td>
+    <td>Load set identification number. (Integer &gt; 0)</td>
   </tr>
   <tr>
-    <td><ghost>CID</ghost></td>
+    <td class = "ghost">CID</td>
     <td>Not used.</td>
   </tr>
   <tr>
@@ -53,7 +53,7 @@ GRAV,9,0,29420.4,0.138814,0.0,-0.990318
     <td>Acceleration vector components measured in default coordinate system. (Real)</td>
   </tr>
   <tr>
-    <td><ghost>MB</ghost></td>
+    <td class = "ghost">MB</td>
     <td>Not used.</td>
   </tr>
 </table>
