--- a/GRDSET.html
+++ b/GRDSET.html
@@ -21,7 +21,7 @@
     <th>1</th><th>2</th><th>3</th><th>4</th><th>5</th><th>6</th><th>7</th><th>8</th><th>9</th>
   </tr>
   <tr>
-    <td>GRDSET</td><td></td><td><ghost>CP</ghost></td><td></td><td></td><td></td><td><ghost>CD</ghost></td><td>PS</td><td><ghost>SEID</ghost></td>
+    <td>GRDSET</td><td></td><td class = "ghost">CP</td><td></td><td></td><td></td><td class = "ghost">CD</td><td>PS</td><td class = "ghost">SEID</td>
   </tr>
 </table>
 
@@ -43,11 +43,11 @@ GRDSET&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&n
     <th>Contents</th>
   </tr>
   <tr>
-    <td><ghost>CP</ghost></td>
+    <td class = "ghost">CP</td>
     <td>Not used.</td>
   </tr>
   <tr>
-    <td><ghost>CD</ghost></td>
+    <td class = "ghost">CD</td>
     <td>Not used.</td>
   </tr>
   <tr>
@@ -55,7 +55,7 @@ GRDSET&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&n
     <td>Default permanent single-point constraints on all grid points. (Any combination of Integers 1 through 6 with no embedded blanks, or blank.)</td>
   </tr>
   <tr>
-    <td><ghost>SEID</ghost></td>
+    <td class = "ghost">SEID</td>
     <td>Not used.</td>
   </tr>
 </table>
@@ -72,7 +72,7 @@ The contents of field 8 of this entry are assumed for the corresponding field 8 
 <li>
 The primary purpose of this entry is to minimize the burden of preparing data for problems with a large amount of repetition (e.g., two-dimensional pinned-joint problems).
 </li>
-
+</ol>
 
 </div>
 
