--- a/PBEAML.html
+++ b/PBEAML.html
@@ -21,7 +21,7 @@
     <th>1</th><th>2</th><th>3</th><th>4</th><th>5</th><th>6</th><th>7</th><th>8</th><th>9</th>
   </tr>
   <tr>
-	<td>PBEAML</td><td>PID</td><td>MID</td><td><ghost>GROUP</ghost></td><td>TYPE</td><td></td><td></td><td></td><td></td>
+	<td>PBEAML</td><td>PID</td><td>MID</td><td class = "ghost">GROUP</td><td>TYPE</td><td></td><td></td><td></td><td></td>
   </tr>
   <tr>
 	<td></td><td>DIM1</td><td>DIM2</td><td>-etc.-</td><td>NSM</td><td></td><td></td><td></td><td></td>
@@ -53,7 +53,7 @@ PBEAML,102,501,,ROD,,,,,<br>
     <td>Material identification number. (Integer > 0)</td>
   </tr>
   <tr>
-    <td><ghost>GROUP</ghost></td>
+    <td class = "ghost">GROUP</td>
     <td>Not used.</td>
   </tr>
   <tr>
@@ -83,6 +83,7 @@ Cross-sections dimensions are shown in Figs. 1 and 2.
   <figcaption>Fig. 2:  Type = ''BAR''.</figcaption>
 </figure>
 </li>
+</ol>
 </div>
 
 <script type="text/javascript" src="footerCSI.js"></script>
