--- a/PMASS.html
+++ b/PMASS.html
@@ -21,7 +21,7 @@
     <th>1</th><th>2</th><th>3</th><th>4</th><th>5</th><th>6</th><th>7</th><th>8</th><th>9</th>
   </tr>
   <tr>
-    <td>PMASS</td><td>PID1</td><td>M1</td><td><ghost>PID2</ghost></td><td><ghost>M2</ghost></td><td><ghost>PID3</ghost></td><td><ghost>M3</ghost></td><td><ghost>PID4</ghost></td><td><ghost>M4</ghost></td>
+    <td>PMASS</td><td>PID1</td><td>M1</td><td class = "ghost">PID2</td><td class = "ghost">M2</td><td class = "ghost">PID3</td><td class = "ghost">M3</td><td class = "ghost">PID4</td><td class = "ghost">M4</td>
   </tr>
 </table>
 
@@ -45,11 +45,11 @@ PMASS,110,1.591280E-02
     <td>Value of scalar mass. (Real)</td>
   </tr>
   <tr>
-    <td><ghost>PID2</ghost>, <ghost>PID3</ghost>, <ghost>PID4</ghost></td>
+    <td class = "ghost">PID2, PID3, PID4</td>
     <td>Not used.</td>
   </tr>
   <tr>
-    <td><ghost>M2</ghost>, <ghost>M3</ghost>, <ghost>M4</ghost></td>
+    <td class = "ghost">M2, M3, M4</td>
     <td>Not used.</td>
   </tr>
 </table>
