--- a/PROD.html
+++ b/PROD.html
@@ -21,7 +21,7 @@
     <th>1</th><th>2</th><th>3</th><th>4</th><th>5</th><th>6</th><th>7</th><th>8</th><th>9</th>
   </tr>
   <tr>
-    <td>PROD</td><td>PID</td><td>MID</td><td>A</td><td>J</td><td><ghost>C</ghost></td><td>NSM</td><td></td><td></td>
+    <td>PROD</td><td>PID</td><td>MID</td><td>A</td><td>J</td><td class = "ghost">C</td><td>NSM</td><td></td><td></td>
   </tr>
 </table>
 
@@ -53,7 +53,7 @@ PROD,501,501,9.5318,25000.,,0.0
     <td>Torsional constant. (Real)</td>
   </tr>
   <tr>
-    <td><ghost>C</ghost></td>
+    <td class = "ghost">C</td>
     <td>Not used.</td>
   </tr>
   <tr>
