--- a/RBE2.html
+++ b/RBE2.html
@@ -41,11 +41,11 @@ RBE2,1000,1,123456,1001,5001
   </tr>
   <tr>
     <td>EID</td>
-    <td>Element identification number. (0 < Integer < 100,000,000)</td>
+    <td>Element identification number. (0 &lt; Integer &lt; 100,000,000)</td>
   </tr>
   <tr>
     <td>GN</td>
-    <td>Identification number of grid point to which all six independent degrees-of freedom for the element are assigned. (Integer > 0)</td>
+    <td>Identification number of grid point to which all six independent degrees-of freedom for the element are assigned. (Integer &gt; 0)</td>
   </tr>
   <tr>
     <td>CM</td>
@@ -53,7 +53,7 @@ RBE2,1000,1,123456,1001,5001
   </tr>
   <tr>
     <td>GMi</td>
-    <td>Grid point identification numbers at which dependent degrees-of-freedom are assigned. (Integer > 0)</td>
+    <td>Grid point identification numbers at which dependent degrees-of-freedom are assigned. (Integer &gt; 0)</td>
   </tr>
 </table>
 
