--- a/RBE3.html
+++ b/RBE3.html
@@ -42,11 +42,11 @@ RBE3,2000,,1,123,1.000000,123,2001,3001<br>
   </tr>
   <tr>
     <td>EID</td>
-    <td>Element identification number. (0 < Integer < 100,000,000)</td>
+    <td>Element identification number. (0 &lt; Integer &lt; 100,000,000)</td>
   </tr>
   <tr>
     <td>REFGRID</td>
-    <td>Reference grid point identification number. (Integer > 0)</td>
+    <td>Reference grid point identification number. (Integer &gt; 0)</td>
   </tr>
   <tr>
     <td>REFC</td>
@@ -62,7 +62,7 @@ RBE3,2000,,1,123,1.000000,123,2001,3001<br>
   </tr>
   <tr>
     <td>G1,j</td>
-    <td>Grid points with components C1 that have weighting factor WT1 in the averaging equations. (Integer > 0)</td>
+    <td>Grid points with components C1 that have weighting factor WT1 in the averaging equations. (Integer &gt; 0)</td>
   </tr>
 </table>
 
