--- a/SPC1.html
+++ b/SPC1.html
@@ -21,7 +21,7 @@
     <th>1</th><th>2</th><th>3</th><th>4</th><th>5</th><th>6</th><th>7</th><th>8</th><th>9</th>
   </tr>
   <tr>
-    <td>SPC1</td><td>SID</td><td>C</td><td>G1</td><td><ghost>G2</ghost></td><td><ghost>G3</ghost></td><td><ghost>G4</ghost></td><td><ghost>G5</ghost></td><td><ghost>G6</ghost></td>
+    <td>SPC1</td><td>SID</td><td>C</td><td>G1</td><td class = "ghost">G2</td><td class = "ghost">G3</td><td class = "ghost">G4</td><td class = "ghost">G5</td><td class = "ghost">G6</td>
   </tr>
 </table>
 
@@ -45,7 +45,7 @@ SPC1,1,123456,2021
     <td>Component numbers. (Any unique combination of the Integers 1 through 6 with no embedded blanks for grid points.)</td>
   </tr>
   <tr>
-    <td><ghost>G2</ghost>, <ghost>G3</ghost>, <ghost>G4</ghost>, <ghost>G5</ghost>, <ghost>G6</ghost></td>
+    <td class = "ghost">G2, G3, G4, G5, G6</td>
     <td>Not used.</td>
   </tr>
 </table>
