--- a/PSHELL.html
+++ b/PSHELL.html
@@ -21,10 +21,10 @@
     <th>1</th><th>2</th><th>3</th><th>4</th><th>5</th><th>6</th><th>7</th><th>8</th><th>9</th>
   </tr>
   <tr>
-	<td>PSHELL</td><td>PID</td><td>MID1</td><td>T</td><td><ghost>MID2</ghost></td><td><ghost>12I/T**3</ghost></td><td><ghost>MID3</ghost></td><td><ghost>TS/T</ghost></td><td><ghost>NSM</ghost></td>
+	<td>PSHELL</td><td>PID</td><td>MID1</td><td>T</td><td class = "ghost">MID2</td><td class = "ghost">12I/T**3</td><td class = "ghost">MID3</td><td class = "ghost">TS/T</td><td class = "ghost">NSM</td>
   </tr>
   <tr>
-	<td></td><td><ghost>Z1</ghost></td><td><ghost>Z2</ghost></td><td><ghost>MID4</ghost></td><td></td><td></td><td></td><td></td><td></td>
+	<td></td><td class = "ghost">Z1</td><td class = "ghost">Z2</td><td class = "ghost">MID4</td><td></td><td></td><td></td><td></td><td></td>
   </tr>
 </table>
 
@@ -52,7 +52,7 @@ PSHELL,105,501,0.0833,501,,501,,4.0
     <td>Membrane thickness. (Real)</td>
   </tr>
   <tr>
-    <td><ghost>MID2</ghost>, <ghost>12I/T**3</ghost>, <ghost>MID3</ghost>, <ghost>TS/T</ghost>, <ghost>NSM</ghost>, <ghost>Z1</ghost>, <ghost>Z2</ghost>, <ghost>MID4</ghost></td>
+    <td class = "ghost">MID2, 12I/T**3, MID3, TS/T, NSM, Z1, Z2, MID4</td>
     <td>Not used.</td>
   </tr>
 </table>
@@ -63,7 +63,7 @@ PSHELL,105,501,0.0833,501,,501,,4.0
 <li> 
 The continuation is optional.
 </li>
-
+</ol>
 </div>
 
 <script type="text/javascript" src="footerCSI.js"></script>
