more html corrections

--- a/CELAS2.html
+++ b/CELAS2.html
@@ -21,7 +21,7 @@
     <th>1</th><th>2</th><th>3</th><th>4</th><th>5</th><th>6</th><th>7</th><th>8</th><th>9</th>
   </tr>
   <tr>
-    <td>CELAS2</td><td>EID</td><td>K</td><td>G1</td><td>C1</td><td>G2</td><td>C2</td><td><ghost>GE</ghost></td><td><ghost>S</ghost></td>
+    <td>CELAS2</td><td>EID</td><td>K</td><td>G1</td><td>C1</td><td>G2</td><td>C2</td><td class = "ghost">GE</td><td class = "ghost">S</td>
   </tr>
 </table>
 
@@ -54,11 +54,11 @@ CELAS2,299,515000.0,201,5,202,5,0
     <td>Component number. (1 &le; Integer &le; 6)</td>
   </tr>
   <tr>
-    <td><ghost>GE</ghost></td>
+    <td class = "ghost">GE</td>
     <td>Not used</td>
   </tr>
   <tr>
-    <td><ghost>S</ghost></td>
+    <td class = "ghost">S</td>
     <td>Not used</td>
   </tr>
 </table>
