--- a/CMASS1.html
+++ b/CMASS1.html
@@ -21,7 +21,7 @@
     <th>1</th><th>2</th><th>3</th><th>4</th><th>5</th><th>6</th><th>7</th><th>8</th><th>9</th>
   </tr>
   <tr>
-    <td>CMASS1</td><td>EID</td><td>PID</td><td>G1</td><td>C1</td><td><ghost>G2</ghost></td><td><ghost>C2</ghost></td><td></td><td></td>
+    <td>CMASS1</td><td>EID</td><td>PID</td><td>G1</td><td>C1</td><td class = "ghost">G2</td><td class = "ghost">C2</td><td></td><td></td>
   </tr>
 </table>
 
@@ -53,11 +53,11 @@ CMASS1,4154,110,2052,1
     <td>Component number. (1 &le; Integer &le; 6)</td>
   </tr>
   <tr>
-    <td><ghost>G2</ghost></td>
+    <td class = "ghost">G2</td>
     <td>Not used</td>
   </tr>
   <tr>
-    <td><ghost>C2</ghost></td>
+    <td class = "ghost">C2</td>
     <td>Not used</td>
   </tr>
 </table>
