--- a/CORD2R.html
+++ b/CORD2R.html
@@ -21,7 +21,7 @@
     <th>1</th><th>2</th><th>3</th><th>4</th><th>5</th><th>6</th><th>7</th><th>8</th><th>9</th>
   </tr>
   <tr>
-	<td>CORD2R</td><td>CID</td><td><ghost>RID</ghost></td><td>A1</td><td>A2</td><td>A3</td><td>B1</td><td>B2</td><td>B3</td>
+	<td>CORD2R</td><td>CID</td><td class = "ghost">RID</td><td>A1</td><td>A2</td><td>A3</td><td>B1</td><td>B2</td><td>B3</td>
   </tr>
   <tr>
 	<td></td><td>C1</td><td>C2</td><td>C3</td><td></td><td></td><td></td><td></td><td></td>
@@ -45,7 +45,7 @@ CORD2R,18,,0.000000,0.0,0.0,0.0,-0.122,1.0,
     <td>Coordinate system identification number. (Integer > 0)</td>
   </tr>
   <tr>
-    <td><ghost>RID</ghost></td>
+    <td class = "ghost">RID</td>
     <td>Not used.</td>
   </tr>
   <tr>
@@ -68,9 +68,9 @@ The location of a grid point (P in the Fig. 1) in this coordinate system is give
 </figure>
 </li>
 <li>
-This entry is referenced exclusively by <crn>GRID</crn> entries, so that they can be specified in an alternative coordinate system.  No other inputs or outputs will use an alternative (not basic) coordinate system.
+This entry is referenced exclusively by GRID entries, so that they can be specified in an alternative coordinate system.  No other inputs or outputs will use an alternative (not basic) coordinate system.
 </li>  
-
+</ol>
 </div>
 
 <script type="text/javascript" src="footerCSI.js"></script>
