--- a/CQUAD4.html
+++ b/CQUAD4.html
@@ -21,10 +21,10 @@
     <th>1</th><th>2</th><th>3</th><th>4</th><th>5</th><th>6</th><th>7</th><th>8</th><th>9</th>
   </tr>
   <tr>
-	<td>CQUAD4</td><td>EID</td><td>PID</td><td>G1</td><td>G2</td><td>G3</td><td>G4</td><td><ghost>THETA</ghost></td><td><ghost>ZOFFS</ghost></td>
+	<td>CQUAD4</td><td>EID</td><td>PID</td><td>G1</td><td>G2</td><td>G3</td><td>G4</td><td class = "ghost">THETA</td><td class = "ghost">ZOFFS</td>
   </tr>
   <tr>
-	<td></td><td><ghost>TFLAG</ghost></td><td><ghost>T1</ghost></td><td><ghost>T2</ghost></td><td><ghost>T3</ghost></td><td><ghost>T4</ghost></td><td></td><td></td><td></td>
+	<td></td><td class = "ghost">TFLAG</td><td class = "ghost">T1</td><td class = "ghost">T2</td><td class = "ghost">T3</td><td class = "ghost">T4</td><td></td><td></td><td></td>
   </tr>
 </table>
 
@@ -41,18 +41,18 @@ CQUAD4,1,101,4001,4002,3002,3001
   </tr>
   <tr>
     <td>EID</td>
-    <td>Element identification number. (0 < Integer < 100,000,000)</td>
+    <td>Element identification number. (0 &lt; Integer &lt; 100,000,000)</td>
   </tr>
   <tr>
     <td>PID</td>
-    <td>Property identification number of a PSHELL entry. (Integer > 0; Default = EID)</td>
+    <td>Property identification number of a PSHELL entry. (Integer &gt; 0; Default = EID)</td>
   </tr>
   <tr>
     <td>Gi</td>
-    <td>Grid point identification numbers of connection points. (Integers > 0, all unique.)</td>
+    <td>Grid point identification numbers of connection points. (Integers &gt; 0, all unique.)</td>
   </tr>
   <tr>
-    <td><ghost>THETA</ghost>, <ghost>ZOFFS</ghost>, <ghost>TFLAG</ghost>, <ghost>T1</ghost>, <ghost>T2</ghost>, <ghost>T3</ghost>, <ghost>T4</ghost></td>
+    <td class = "ghost">THETA, ZOFFS, TFLAG, T1, T2, T3, T4</td>
     <td>Not used.</td>
   </tr>
 </table>
@@ -63,7 +63,7 @@ CQUAD4,1,101,4001,4002,3002,3001
 <li> 
 The continuation is optional.
 </li>
-
+</ol>
 </div>
 
 <script type="text/javascript" src="footerCSI.js"></script>
