--- a/CONM2.html
+++ b/CONM2.html
@@ -21,7 +21,7 @@
     <th>1</th><th>2</th><th>3</th><th>4</th><th>5</th><th>6</th><th>7</th><th>8</th><th>9</th>
   </tr>
   <tr>
-	<td>CONM2</td><td>EID</td><td>G</td><td><ghost>CID</ghost></td><td>M</td><td>X1</td><td>X2</td><td>X3</td><td></td>
+	<td>CONM2</td><td>EID</td><td>G</td><td class = "ghost">CID</td><td>M</td><td>X1</td><td>X2</td><td>X3</td><td></td>
   </tr>
   <tr>
 	<td></td><td>I11</td><td>I21</td><td>I22</td><td>I31</td><td>I32</td><td>I33</td><td></td><td></td>
@@ -49,7 +49,7 @@ CONM2,3000,1001,,10.060968
     <td>Grid point identification number. (Integer &gt; 0)</td>
   </tr>
   <tr>
-    <td><ghost>CID</ghost></td>
+    <td class = "ghost">CID</td>
     <td>Not used.</td>
   </tr>
   <tr>
