--- a/cquad4_theory.html
+++ b/cquad4_theory.html
@@ -52,11 +52,7 @@ N_4 &= \frac{1}{4}(1-\xi)(1+\eta)
 The element domain is mapped to curvilinear space such that the domain spans $-1 \leq \xi \leq 1$, $-1 \leq \eta \leq 1$, and $-1 \leq \zeta \leq 1$, where $\zeta$ is the thickness perpendicular to the element midsurface.  The shape function and derivative values are plotted on the curvilinear domain in Fig. 2.  
 </p>
 
-<figure>
-  <object type="image/svg+xml" data="shapeFunctions.svg">Your browser does not support SVG</object>
-  <figcaption>Fig. 2:  CQUAD4 shape functions and derivatives on curvilinear domain.</figcaption>
-</figure>
-<p></p>
+<img src="img/tenBarStatic.png">
 
 <p>
 
