--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <h1>NASTRAN CoFE</h1>
 
 <p>
-NASTRAN Compatible Finite Elements (CoFE) is an open-source MATLAB-based program for structural analysis and design.  The structural mesh, properties, multipoint constraints, loads, and boundary conditions are defined using the NASTRAN free field, small field, or large field bulk data input format.  Definition of the objective function and constraint functions for optimization problems is done in MATLAB.  Examples are provided to illustrate the straightforward process of creating analysis and optimization cases. 
+NASTRAN Compatible Finite Elements (CoFE) is a standalone finite element code for structural analysis and design. CoFE is an open source program implemented using object-oriented MATLAB.The structural mesh, properties, multipoint constraints, loads, and boundary conditions are defined using the NASTRAN free field, small field, or large field bulk data input format.  Definition of the objective function and constraint functions for optimization problems is done in MATLAB.  Examples are provided to illustrate the straightforward process of creating analysis and optimization cases. 
 </p>
 
 <p>
